<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/iv_product_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/product_image"
                tools:src="@mipmap/ic_launcher" />

        <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="Product Name" />

        <TextView
                android:id="@+id/tv_generic_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                tools:text="Generic name" />

        <LinearLayout
                android:id="@+id/ll_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/tv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    tools:text="- Ingrediente1\n- Ingrediente2\n- Ingrediente3" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/ll_nutritions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nutritions"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/tv_nutritions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    tools:text="- Valor1\n- Valor2\n- Valor3" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/ll_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/tv_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    tools:text="Category1 Category2 Category3" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/ll_stores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/tv_stores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    tools:text="Category1 Category2 Category3" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>