<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightgreen">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gd_top"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gd_start"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.03" />

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gd_top3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.70" />

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gd_end"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.97" />

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gd_vertical2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.43" />

            <ImageView
                    android:id="@+id/iv_product_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/product_image"
                    app:layout_constraintHeight_percent="0.90"
                    app:layout_constraintStart_toEndOf="@id/gd_start"
                    app:layout_constraintTop_toBottomOf="@id/gd_top"
                    app:layout_constraintWidth_percent="0.4"
                    tools:src="@mipmap/ic_launcher" />

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/gd_top3"
                    app:layout_constraintEnd_toStartOf="@id/gd_end"
                    app:layout_constraintStart_toEndOf="@id/iv_product_image"
                    app:layout_constraintTop_toBottomOf="@id/gd_top">

                <TextView
                        android:id="@+id/tv_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="3"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/gd_top3"
                        app:layout_constraintEnd_toStartOf="@id/gd_end"
                        app:layout_constraintStart_toEndOf="@id/iv_product_image"
                        app:layout_constraintTop_toBottomOf="@id/gd_top"
                        tools:text="Product Name" />

                <TextView
                        android:id="@+id/tv_generic_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@id/gd_vertical2"
                        app:layout_constraintTop_toBottomOf="@id/tv_product_name"
                        tools:text="Generic name" />


            </LinearLayout>

            <Button
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/add_to_the_fridge"
                    android:textColor="@android:color/white"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/gd_end"
                    app:layout_constraintStart_toEndOf="@id/gd_vertical2"
                    app:layout_constraintTop_toBottomOf="@id/gd_top3" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

            <LinearLayout
                    android:id="@+id/ll_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/tv_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        tools:text="- Ingrediente1\n- Ingrediente2\n- Ingrediente3" />

            </LinearLayout>


            <LinearLayout
                    android:id="@+id/ll_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/tv_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        tools:text="Category1 Category2 Category3" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_stores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stores"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/tv_stores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        tools:text="Category1 Category2 Category3" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
